# New-SFML-Project

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
design/classes/: UIElement.puml  test.puml
include/: CommonFunctions.h  ErrorLogger.h  ResourceManager.h  UI.h  UIElement.h
src/: ResourceManager.cpp  UI.cpp  UIElement.cpp  main.cpp
test/: Test_UI.cpp
